--- a/styles/main_styles.css
+++ b/styles/main_styles.css
@@ -1,5 +1,6 @@
-body {font-family: Verdana, Geneva, Tahoma, sans-serif;
-padding: 20px;
-background-color: bisque;
-color: maroon
-;}
+body {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    padding: 20px;
+    background-color: bisque;
+    color: maroon;
+}
