--- a/styles/main_styles.css
+++ b/styles/main_styles.css
@@ -4,3 +4,14 @@ body {
     background-color: bisque;
     color: maroon;
 }
+
+p {
+color: black;
+font-size: 16px;
+}
+
+#copy {
+    color: darkgrey;
+font-size: 10px;
+}
+
